tests/should_succeed/bool_eq_bool.jou
import "stdlib/io.jou"

def do_stuff(a: bool, b: bool) -> None:
    if a == b:
        puts("Hi")

def main() -> int:
    do_stuff(False, False)  # Output: Hi

    # Output: 1001
    printf(
        "%d%d%d%d\n",
        True == True,
        True == False,
        False == True,
        False == False,
    )

    return 0
