tests/syntax_error/import_missing_comma_with_parens.jou
from "stdlib/io.jou" import (printf puts)  # Error: expected a ')', got a variable name 'puts'
